Extract catalog module from order, drop List<Beer> object embedding
Moves Beer/BeerStyle and their persistence into a new catalog module
(ManageBeersUseCase exposed API), independent of customer and order like
the other leaf modules. Order no longer embeds catalog's Beer objects or
a JPA join to BeerData - Order.beers/OrderData.beers become a plain
List<Long> (@ElementCollection over the existing beer_order_beers table),
removing the last cross-module object reference in the domain.

Introduces order-owned anti-corruption ports (CustomerLookup, BeerLookup)
with thin adapters onto customer's and catalog's *UseCase APIs, so Orders
depends on ports shaped around its own needs rather than the other
modules' full interfaces directly - justified now that order integrates
with two external modules instead of one.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>